login page configured

--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,5 +1,31 @@
 <html>
 <body>
-<div>{{some}}</div>
+    <div>
+        <form action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+            <input type="submit" value="Sign Out">
+        </form>
+    </div>
+    <div>
+        <form method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+            <input type="text" name="text" placeholder="Input message: ">
+            <input type="text" name="tag" placeholder="Input tag: ">
+            <button type="submit">Add</button>
+        </form>
+    </div>
+    <div>Message list</div>
+    <form method="post" action="filter">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+        <input type="text" name="filter" placeholder="Input filter">
+        <button type="submit">Search</button>
+    </form>
+    {{#messages}}
+    <div>
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+    </div>
+    {{/messages}}
 </body>
 </html>
